package com.piedrazul.Domain.enums;

public enum AppointmentStatus {
  SCHEDULED,
  RESCHEDULED,
  CANCELLED,
  ATTENDED
}