package com.piedrazul.Domain.enums;

public enum AttentionType {
  GENERAL,
  SPECIALIZED
}
