@startuml AppointmentDomainClasses

!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Deployment.puml

class Appointment <<entity>> #LightYellow;line:Black;text:Black {
  <<Own>> -id: long
  <<Own>> -citizenshipCardPatient: long
  <<Own>> -phoneNumber: String
  <<Own>> -medicalStaffId: long
  <<Own>> -dateAndTime: Date
  <<Own>> -attentionType: AttentionType
  <<Own>> -status: AppointmentStatus
  <<Own>> -reason: String
  + Appointment(patCard, phone, medId, dateTime, attType, reason)
}

class AppointmentManager <<entity>> #LightYellow;line:Black;text:Black extends User {
}

' from domain layer
abstract User <<abstract>> #Pink;line:Black;line.dotted;text:gray {
  # id: long
  # username: String
  # fullname: String
  # password: String
  # role: Role
  # state: State
}

enum AppointmentStatus <<enumeration>> #LightBlue;line:Black;text:Black {
  SCHEDULED
  RESCHEDULED
  CANCELLED
  ATTENDED
}

enum AttentionType <<enumeration>> #LightBlue;line:Black;text:Black {
  GENERAL
  SPECIALIZED
}

Appointment ..> AppointmentStatus
Appointment ..> AttentionType

@enduml
